trunk/Archive2/1d/da04f6484c872d/output
main.cpp:26:5: error: no matching function for call to 'foo'
    foo(x);
    ^~~
main.cpp:9:10: note: candidate template ignored: couldn't infer template argument 'T'
    void foo(typename outer<T>::inner)
         ^
1 error generated.

main.cpp: In function 'int main()':
main.cpp:26:10: error: no matching function for call to 'foo(X::outer<int>::inner&)'
     foo(x);
          ^
main.cpp:26:10: note: candidate is:
main.cpp:9:10: note: template<class T> void X::foo(typename X::outer<T>::inner)
     void foo(typename outer<T>::inner)
          ^
main.cpp:9:10: note:   template argument deduction/substitution failed:
main.cpp:26:10: note:   couldn't deduce template parameter 'T'
     foo(x);
          ^
